# hslogger4j

./: COPYRIGHT  README  build.xml  hslogger4j.cabal
haskell/System/Log/Handler/: Log4jXML.hs
